0412闭包和堆栈内存释放

--- a/WEEK1/0412DAY3/index.html
+++ b/WEEK1/0412DAY3/index.html
@@ -5,6 +5,6 @@
     <title>珠峰培训</title>
 </head>
 <body>
-<script src="js/8-关于私有变量的一点练习.js"></script>
+<script src="js/10-JS中的堆栈内存释放.js"></script>
 </body>
 </html>
