--- a/WEEK1/0415DAY5/index.html
+++ b/WEEK1/0415DAY5/index.html
@@ -5,6 +5,6 @@
     <title>珠峰培训</title>
 </head>
 <body>
-<script src="js/3-oop.js"></script>
+<script src="js/5-prototype.js"></script>
 </body>
 </html>
