--- a/WEEK2/0419DAY3/index.html
+++ b/WEEK2/0419DAY3/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>珠峰培训</title>
+    <link rel="stylesheet/less" href="css/demo1.less">
+    <script src="js/less-2.5.3.min.js"></script>
+
+    <!--<link rel="stylesheet" href="css/demo1.min.css">-->
 </head>
 <body>
-<script src="js/8.js"></script>
+<div class="box">
+    <a href="#">珠峰培训</a>
+</div>
 </body>
 </html>
