--- a/WEEK2/0421DAY4/index.html
+++ b/WEEK2/0421DAY4/index.html
@@ -5,6 +5,6 @@
     <title>珠峰培训</title>
 </head>
 <body>
-<script src="js/6-apply.js"></script>
+<script src="js/9-ES6.js"></script>
 </body>
 </html>
