--- a/WEEK3/SHOP/index.html
+++ b/WEEK3/SHOP/index.html
@@ -19,17 +19,15 @@
         <a href="javascript:;">热销</a>
     </header>
     <ul class="productBox clearfix">
-        <li><a href="#">
+        <!--<li><a href="#">
             <img src="img/1.jpg" alt="">
             <p title="HUAWEI P10 Plus 6GB+128GB 全网通版（钻雕金）">HUAWEI P10 Plus 6GB+128GB 全网通版（钻雕金）</p>
             <span>￥4888</span>
             <span>时间：2014-01-01</span>
             <span>热度：9999</span>
-        </a></li>
+        </a></li>-->
     </ul>
 </div>
-
-
 <!--
  真实项目中我们经常使用A标签做一些点击的按钮
    1.因为A标签的:hover伪类兼容所有的浏览器
@@ -38,5 +36,8 @@
     <a href="javascript:;">珠峰</a>
 -->
 <!--<a href="javascript:;">珠峰</a>-->
+
+<!--IMPORT JS-->
+<script src="js/index.js"></script>
 </body>
 </html>
