--- a/WEEK3/0427DAY3/index.html
+++ b/WEEK3/0427DAY3/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>珠峰培训</title>
+    <link rel="stylesheet" href="css/reset.min.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <div class="tabBox">
-    <ul>
-        <li>新闻</li>
+    <ul class="header clearfix">
+        <li class="active">新闻</li>
         <li>电影</li>
         <li>音乐</li>
     </ul>
-    <div>时事新闻</div>
+    <div class="active">时事新闻</div>
     <div>最新电影</div>
     <div>欧美音乐</div>
 </div>
 
-
 <script src="js/jquery.min.js"></script>
-<script src="js/2.js"></script>
+<script src="js/4.js"></script>
 </body>
 </html>
