--- a/WEEK3/0429DAY4/index.html
+++ b/WEEK3/0429DAY4/index.html
@@ -47,5 +47,6 @@
 
 <script src="js/utils.js"></script>
 <script src="js/2.js"></script>
+<script src="js/jquery.min.js"></script>
 </body>
 </html>
