--- a/WEEK4/0503DAY2/index.html
+++ b/WEEK4/0503DAY2/index.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>珠峰培训</title>
+    <link rel="stylesheet" href="reset.min.css">
+    <style>
+        .center {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            margin: -150px 0 0 -150px;
+            width: 300px;
+            height: 300px;
+            background: rgba(0, 0, 0, .5);
+        }
+    </style>
 </head>
 <body>
-<div>
+<!--<a href="javascript:;" id="link">点我啊</a>-->
+
+<ul id="nav">
+    <li><a href='http://xxx'>xxx</a></li>
+    <li><a href='http://sss'>sss</a></li>
+</ul>
+
+<!--<div>
     <p id="p1"></p>
     <p id="p2"></p>
     <p id="p3"></p>
-</div>
-<script src="js/6.js"></script>
+</div>-->
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/7.js"></script>
 </body>
 </html>
