第四周：定时器动画和轮播图

--- a/WEEK4/0505DAY3/index.html
+++ b/WEEK4/0505DAY3/index.html
@@ -7,18 +7,21 @@
     <style>
         .box {
             position: absolute;
-            top: 0;
-            left: 0;
+            top: 200px;
+            left: 200px;
             width: 100px;
             height: 100px;
             background: #E01D20;
+            opacity: 1;
+            font-size: 16px;
         }
     </style>
 </head>
 <body>
-<div class="box" id="box"></div>
+<div class="box" id="box">哈哈</div>
 
-
-<script src="js/4.js"></script>
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/animate.js"></script>
+<script src="js/5.js"></script>
 </body>
 </html>
