第四周：定时器动画和轮播图

--- a/WEEK4/0506DAY4/banner.html
+++ b/WEEK4/0506DAY4/banner.html
@@ -17,10 +17,29 @@
         <div class="slide"><img src="img/banner4.jpg" alt=""></div>-->
     </div>
     <ul class="focus">
-       <!-- <li class="active"></li>
-        <li></li>
-        <li></li>
-        <li></li>-->
+        <!-- <li class="active"></li>
+         <li></li>
+         <li></li>
+         <li></li>-->
+    </ul>
+    <a href="javascript:;" class="arrow arrowLeft"></a>
+    <a href="javascript:;" class="arrow arrowRight"></a>
+</section>
+
+<section class="container" id="container2">
+    <div class="wrapper">
+        <!--<div class="slide"><img src="img/banner1.jpg" alt=""></div>
+        <div class="slide">
+            <img src="img/banner2.jpg" alt="">
+        </div>
+        <div class="slide"><img src="img/banner3.jpg" alt=""></div>
+        <div class="slide"><img src="img/banner4.jpg" alt=""></div>-->
+    </div>
+    <ul class="focus">
+        <!-- <li class="active"></li>
+         <li></li>
+         <li></li>
+         <li></li>-->
     </ul>
     <a href="javascript:;" class="arrow arrowLeft"></a>
     <a href="javascript:;" class="arrow arrowRight"></a>
@@ -28,5 +47,19 @@
 
 <script src="js/animate.js"></script>
 <script src="js/banner.js"></script>
+<!--<script>-->
+    <!--let b1 = new Banner({-->
+        <!--ele: '#container',-->
+        <!--url: 'json/banner.json',-->
+        <!--speed: 100-->
+    <!--});-->
+
+    <!--let b2 = new Banner({-->
+        <!--ele: '#container2',-->
+        <!--url: 'json/banner2.json',-->
+        <!--interval: 1000,-->
+        <!--speed: 500-->
+    <!--});-->
+<!--</script>-->
 </body>
 </html>
