--- a/WEEK5/0508DAY1/banner-fade.html
+++ b/WEEK5/0508DAY1/banner-fade.html
@@ -9,20 +9,23 @@
 <body>
 <section class="container" id="container">
     <div class="wrapper">
-        <div class="slide"><img src="img/banner1.jpg" alt=""></div>
+        <!--<div class="slide"><img src="img/banner1.jpg" alt=""></div>
         <div class="slide"><img src="img/banner2.jpg" alt=""></div>
         <div class="slide"><img src="img/banner3.jpg" alt=""></div>
-        <div class="slide"><img src="img/banner4.jpg" alt=""></div>
+        <div class="slide"><img src="img/banner4.jpg" alt=""></div>-->
     </div>
     <ul class="focus">
-        <li class="active"></li>
+        <!--<li class="active"></li>
         <li></li>
         <li></li>
-        <li></li>
+        <li></li>-->
     </ul>
     <a href="javascript:;" class="arrow arrowLeft"></a>
     <a href="javascript:;" class="arrow arrowRight"></a>
 </section>
 
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/banner-fade.js"></script>
 </body>
 </html>
+幕后玩家
