第五周：事件及实战练习

--- a/WEEK5/0509DAY2/index.html
+++ b/WEEK5/0509DAY2/index.html
@@ -11,19 +11,43 @@
             height: 100px;
             background: red;
         }
+
+        #outer {
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            width: 200px;
+            height: 200px;
+            background: red;
+            cursor: pointer;
+        }
+
+        #inner {
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            width: 100px;
+            height: 100px;
+            background: green;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-<form action="http://www.zhufengpeixun.cn/">
-    <!--<a href="http://www.zhufengpeixun.cn/#wowslider-container1">珠峰培训最新全栈视频，等你来拿~~</a>-->
+<!--<form action="http://www.zhufengpeixun.cn/">
+    &lt;!&ndash;<a href="http://www.zhufengpeixun.cn/#wowslider-container1">珠峰培训最新全栈视频，等你来拿~~</a>&ndash;&gt;
     <a href="http://www.zhufengpeixun.cn/" id="link">珠峰培训最新全栈视频，等你来拿~~</a>
 
     <div id="box"></div>
     <input type="text" id="tempInp">
     <input type="submit" value="提交">
-</form>
+</form>-->
+
+<div id="outer">
+    <div id="inner"></div>
+</div>
 
 
-<script src="js/3.js"></script>
+<script src="js/5.js"></script>
 </body>
 </html>
