第五周：事件及实战练习

--- a/WEEK4/0506DAY4/banner.html
+++ b/WEEK4/0506DAY4/banner.html
@@ -26,27 +26,27 @@
     <a href="javascript:;" class="arrow arrowRight"></a>
 </section>
 
-<section class="container" id="container2">
+<!--<section class="container" id="container2">
     <div class="wrapper">
-        <!--<div class="slide"><img src="img/banner1.jpg" alt=""></div>
+        &lt;!&ndash;<div class="slide"><img src="img/banner1.jpg" alt=""></div>
         <div class="slide">
             <img src="img/banner2.jpg" alt="">
         </div>
         <div class="slide"><img src="img/banner3.jpg" alt=""></div>
-        <div class="slide"><img src="img/banner4.jpg" alt=""></div>-->
+        <div class="slide"><img src="img/banner4.jpg" alt=""></div>&ndash;&gt;
     </div>
     <ul class="focus">
-        <!-- <li class="active"></li>
+        &lt;!&ndash; <li class="active"></li>
          <li></li>
          <li></li>
-         <li></li>-->
+         <li></li>&ndash;&gt;
     </ul>
     <a href="javascript:;" class="arrow arrowLeft"></a>
     <a href="javascript:;" class="arrow arrowRight"></a>
-</section>
+</section>-->
 
 <script src="js/animate.js"></script>
-<script src="js/banner.js"></script>
+<script src="js/banner-委托.js"></script>
 <!--<script>-->
     <!--let b1 = new Banner({-->
         <!--ele: '#container',-->
