--- a/WEEK5/0513DAY5/3-DRAG.html
+++ b/WEEK5/0513DAY5/3-DRAG.html
@@ -7,6 +7,7 @@
     <style>
         html, body {
             height: 500%;
+            -webkit-user-select: none; /*禁止用户选中页面中的文字*/
         }
 
         /*DIALOG*/
@@ -71,5 +72,6 @@
 
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/drag.js"></script>
+<script src="js/bind.js"></script>
 </body>
 </html>
