第五周：事件及实战练习

--- a/WEEK5/0513DAY5/3-DRAG.html
+++ b/WEEK5/0513DAY5/3-DRAG.html
@@ -56,6 +56,10 @@
             font-family: "Microsoft JhengHei";
             cursor: pointer;
         }
+
+        .active {
+            background: orange !important;
+        }
     </style>
 </head>
 <body>
@@ -71,7 +75,7 @@
 </div>
 
 <script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/drag-plugin.js"></script>
 <script src="js/drag.js"></script>
-<script src="js/bind.js"></script>
 </body>
 </html>
