--- a/WEEK6/0516DAY2/1-H5.html
+++ b/WEEK6/0516DAY2/1-H5.html
@@ -5,8 +5,12 @@
     <title>珠峰培训</title>
     <style>
         body{
-            background-origin: ;
+           perspective: ;
         }
+        @font-face {
+
+        }
+
     </style>
 </head>
 <body>
