--- a/WEEK6/0516DAY2/index.html
+++ b/WEEK6/0516DAY2/index.html
@@ -60,6 +60,77 @@
         <audio src="audio/bell.mp3" loop preload="none" id="answerBell"></audio>
         <audio src="audio/say.mp3" preload="none" id="introduction"></audio>
     </section>
+
+    <!--MESSAGE-->
+    <section class="messageBox">
+        <ul class="wrapper clearfix">
+            <li class="self">
+                <i class="arrow"></i>
+                <img src="img/zf_messageStudent.png" alt="" class="pic">
+                面试官您好，我叫周啸天，来自于河北承德，2019年毕业于XXX院校，学习的是XXX专业，到目前位置工作9年，先后担任高级软件工程师、总经理助理、技术经理和总监等职务
+            </li>
+            <li class="inter">
+                <i class="arrow"></i>
+                <img src="img/zf_messageLogo.png" alt="" class="pic">
+                哇塞！好牛X啊！介绍一下自己的专业技能吧！
+            </li>
+            <li class="self">
+                <i class="arrow"></i>
+                <img src="img/zf_messageStudent.png" alt="" class="pic">
+                本人擅长：原生JS、ES6、Promise等设计模式、组件和插件封装，看过JQ源码，可以开发各种Hybrid混合APP...
+            </li>
+            <li class="inter">
+                <i class="arrow"></i>
+                <img src="img/zf_messageLogo.png" alt="" class="pic">
+                框架会吗？我们公司现在使用的是VUE和REACT
+            </li>
+            <li class="self">
+                <i class="arrow"></i>
+                <img src="img/zf_messageStudent.png" alt="" class="pic">
+                之前的公司使用的是REACT开发，个人对于REACT渲染原理、MVC模式、SPA单页面应用、DIFF差异渲染机制以及REDUX原理等都有研究，掌握的很熟练，对于VUE之前也做过，如果公司需要可以快速入手
+            </li>
+            <li class="inter">
+                <i class="arrow"></i>
+                <img src="img/zf_messageLogo.png" alt="" class="pic">
+                webpack会吗？
+            </li>
+            <li class="self">
+                <i class="arrow"></i>
+                <img src="img/zf_messageStudent.png" alt="" class="pic">
+                之前项目都是基于脚手架完成的，自己偶尔去修改一些webpack配置项
+            </li>
+            <li class="self">
+                <i class="arrow"></i>
+                <img src="img/zf_messageStudent.png" alt="" class="pic">
+                不过目前正在深入研究，可以搭建简单的脚手架
+            </li>
+            <li class="self">
+                <i class="arrow"></i>
+                <img src="img/zf_messageStudent.png" alt="" class="pic">
+                同时对于NODE/EXPRESS等后台开发也有所涉猎，只是没有应用到项目实战中，目前也正在研究，对这个比较感兴趣
+            </li>
+            <li class="inter">
+                <i class="arrow"></i>
+                <img src="img/zf_messageLogo.png" alt="" class="pic">
+                你认为你的优点在于哪？和其他人对比，公司为啥要录用你！
+            </li>
+            <li class="self">
+                <i class="arrow"></i>
+                <img src="img/zf_messageStudent.png" alt="" class="pic">
+                肯吃苦、肯加班、能力高、要钱少...这些够吗?
+            </li>
+            <li class="inter">
+                <i class="arrow"></i>
+                <img src="img/zf_messageLogo.png" alt="" class="pic">
+                就是你啦，明天来上班！
+            </li>
+        </ul>
+
+        <div class="keyBoard">
+            <span></span><!--好的，马上介绍！-->
+            <a href="javascript:;" class="submit"></a>
+        </div>
+    </section>
 </main>
 
 <!--IMPORT JS-->
