--- a/WEEK6/0516DAY2/index.html
+++ b/WEEK6/0516DAY2/index.html
@@ -74,6 +74,7 @@
                 <img src="img/zf_messageLogo.png" alt="" class="pic">
                 哇塞！好牛X啊！介绍一下自己的专业技能吧！
             </li>
+            <!--后期会手动在这个位置增加一条新的记录-->
             <li class="self">
                 <i class="arrow"></i>
                 <img src="img/zf_messageStudent.png" alt="" class="pic">
@@ -130,6 +131,8 @@
             <span></span><!--好的，马上介绍！-->
             <a href="javascript:;" class="submit"></a>
         </div>
+
+        <audio src="audio/music.mp3" preload="none" loop id="demonMusic"></audio>
     </section>
 </main>
 
