--- a/WEEK6/QQMUSIC/index.html
+++ b/WEEK6/QQMUSIC/index.html
@@ -37,14 +37,14 @@
     <div class="backgroundMark"></div>
 
     <!--AUDIO-->
-    <audio src="img/myDream.m4a" preload="none" loop></audio>
+    <audio src="img/C400001KxARP2Ij3hH.m4a" preload="none" id="musicAudio"></audio>
 
     <!--HEADER-->
     <header class="headerBox">
         <img src="img/myDream.jpg" alt="" class="pic">
         <div class="title">
-            <h1>我的梦-My Dream</h1>
-            <h2>张靓颖</h2>
+            <h1>阿刁-Live</h1>
+            <h2>张韶涵</h2>
         </div>
         <a href="javascript:;" class="playBtn"></a>
     </header>
@@ -52,7 +52,7 @@
     <!--CONTENT-->
     <section class="contentBox">
         <div class="wrapper">
-            <p>我的梦（华为手机主题曲） - 张靓颖</p>
+            <!--<p>我的梦（华为手机主题曲） - 张靓颖</p>-->
         </div>
     </section>
 
@@ -63,7 +63,7 @@
             <div class="progress">
                 <div class="current"></div>
             </div>
-            <span class="duration">03:00</span>
+            <span class="duration">00:00</span>
         </div>
         <a href="javascript:;" class="downLoadBtn">下载这首音乐</a>
     </footer>
