--- a/WEEK6/0516DAY2/index.html
+++ b/WEEK6/0516DAY2/index.html
@@ -134,6 +134,19 @@
 
         <audio src="audio/music.mp3" preload="none" loop id="demonMusic"></audio>
     </section>
+
+    <!--CUBE-->
+    <section class="cubeBox">
+        <ul class="cube">
+            <li><img src="img/zf_cube1.png" alt=""></li>
+            <li><img src="img/zf_cube2.png" alt=""></li>
+            <li><img src="img/zf_cube3.png" alt=""></li>
+            <li><img src="img/zf_cube4.png" alt=""></li>
+            <li><img src="img/zf_cube5.png" alt=""></li>
+            <li><img src="img/zf_cube6.png" alt=""></li>
+        </ul>
+        <img src="img/zf_cubeTip.png" alt="" class="tip">
+    </section>
 </main>
 
 <!--IMPORT JS-->
