--- a/WEEK6/0516DAY2/index.html
+++ b/WEEK6/0516DAY2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>珠峰培训</title>
     <!--DEV-->
+    <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
     <link rel="stylesheet/less" href="css/index.less">
     <script src="js/less-2.5.3.min.js"></script>
 
@@ -147,10 +148,25 @@
         </ul>
         <img src="img/zf_cubeTip.png" alt="" class="tip">
     </section>
+
+    <!--DETAIL-->
+    <section class="detailBox">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+            </div>
+        </div>
+    </section>
 </main>
 
 <!--IMPORT JS-->
 <script src="js/zepto.min.js"></script>
+<script src="js/swiper-3.4.2.jquery.min.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
