--- a/WEEK6/0516DAY2/index.html
+++ b/WEEK6/0516DAY2/index.html
@@ -153,8 +153,69 @@
     <section class="detailBox">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"></div>
-                <div class="swiper-slide"></div>
+                <!--PAGE1-->
+                <div class="swiper-slide page1">
+                    <dl>
+                        <dt>课程大纲</dt>
+                        <dd>
+                            <em>01</em>
+                            <a href="#">HTML(5)+CSS(3)+移动端响应式布局开发及相关插件的使用</a>
+                        </dd>
+                        <dd>
+                            <em>02</em>
+                            <a href="#">JS中的闭包及堆栈内存以及THIS的处理</a>
+                        </dd>
+                        <dd>
+                            <em>03</em>
+                            <a href="#">JS中的面向对象编程，可以基于面向对象封装组件和插件等</a>
+                        </dd>
+                        <dd>
+                            <em>04</em>
+                            <a href="#">ES6中的新特性及数组对象里面的常用方法</a>
+                        </dd>
+                        <dd>
+                            <em>05</em>
+                            <a href="#">JS中的同步异步编程及Promise设计模式</a>
+                        </dd>
+                        <dd>
+                            <em>06</em>
+                            <a href="#">JS中的事件委托及事件池及发布订阅设计模式</a>
+                        </dd>
+                        <dd>
+                            <em>07</em>
+                            <a href="#">JS中的DOM操作以及重绘和回流的优化</a>
+                        </dd>
+                        <dd>
+                            <em>08</em>
+                            <a href="#">HTTP交互及AJAX库的封装以及跨域数据共享</a>
+                        </dd>
+                        <dd>
+                            <em>09</em>
+                            <a href="#">VUE:VUE-CLI/VUE-ROUTER/VUEX/VUE ELEMENT等全家桶</a>
+                        </dd>
+                        <dd>
+                            <em>10</em>
+                            <a href="#">REACT:REACT-ROUTER/REACT-REDUX/DVA/AXIOS/ANT等</a>
+                        </dd>
+                        <dd>
+                            <em>11</em>
+                            <a href="#">辅助技能：NODE/WEBPACK/GIT等</a>
+                        </dd>
+                    </dl>
+                </div>
+
+                <!--PAGE2-->
+                <div class="swiper-slide page2">
+                    <h2>课程体系</h2>
+                    <img src="img/zf_course1.png" alt="">
+                    <img src="img/zf_course2.png" alt="">
+                    <img src="img/zf_course3.png" alt="">
+                    <img src="img/zf_course4.png" alt="">
+                    <img src="img/zf_course5.png" alt="">
+                    <img src="img/zf_course6.png" alt="">
+                    <img src="img/zf_course.png" alt="">
+                </div>
+
                 <div class="swiper-slide"></div>
                 <div class="swiper-slide"></div>
                 <div class="swiper-slide"></div>
@@ -167,6 +228,7 @@
 <!--IMPORT JS-->
 <script src="js/zepto.min.js"></script>
 <script src="js/swiper-3.4.2.jquery.min.js"></script>
+<script src="js/makisu.min.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
