--- a/WEEK6/0516DAY2/index.html
+++ b/WEEK6/0516DAY2/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>珠峰培训</title>
-    <!--DEV-->
+    <!--IMPORT CSS-->
     <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
-    <link rel="stylesheet/less" href="css/index.less">
-    <script src="js/less-2.5.3.min.js"></script>
+    <link rel="stylesheet" href="css/index.min.css">
 
     <!--PRE-FIX-FREE:设置前缀的插件-->
     <script src="js/prefixfree.min.js"></script>
