--- a/WEEK7/vote/index.html
+++ b/WEEK7/vote/index.html
@@ -48,7 +48,7 @@
 
     <section class="userList">
         <ul>
-            <li>
+            <!--<li>
                 <a href="detail.html?userId=0">
                     <img src="img/man.png" alt="" class="picture">
                     <p class="title">
@@ -62,10 +62,16 @@
                     <span class="voteNum">7</span>
                     <a href="javascript:;" class="voteBtn">投他一票</a>
                 </div>
-            </li>
+            </li>-->
         </ul>
         <div class="tip">暂时没有匹配的数据</div>
     </section>
 </main>
+
+<!--IMPORT JS-->
+<script src="js/zepto.min.js"></script>
+<script src="js/axios.min.js"></script>
+<script src="js/axios_default.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
