--- a/WEEK7/vote/index.html
+++ b/WEEK7/vote/index.html
@@ -28,15 +28,6 @@
 </head>
 <body>
 <main class="mainBox">
-    <!--NAV-->
-    <nav class="navBox">
-        <a href="index.html">首页</a>
-        <a href="javascript:;">登录</a>
-        <a href="javascript:;">注册</a>
-        <a href="detail.html"></a>
-        <a href="javascript:;">退出</a>
-    </nav>
-
     <header class="headerBox">
         <img src="img/title.png" alt="" class="title">
         <a href="join.html" class="sign">我要参赛</a>
@@ -72,6 +63,7 @@
 <script src="js/zepto.min.js"></script>
 <script src="js/axios.min.js"></script>
 <script src="js/axios_default.js"></script>
+<script src="js/component/nav.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
