--- a/WEEK11/day1/public/index.html
+++ b/WEEK11/day1/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <title>React App</title>
-    <link rel="stylesheet" href="css/reset.min.css">
+    <!--<link rel="stylesheet" href="css/reset.min.css">-->
 </head>
 <body>
 <div id="root"></div>
