--- a/WEEK12/KETANG/public/index.html
+++ b/WEEK12/KETANG/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <title>珠峰培训-REACT</title>
+    <script src="js/jweixin-1.2.0.js"></script>
 </head>
 <body>
 <!--把REM计算放到BODY头部，目的是为了保证CSS导入后才执行这段JS（不写在INDEX中而是写在页面中，就是为了保证这段程序加载速度快一些，没必要等到合并后的JS加载，先把样式处理了）-->
