其它跨域方式的处理

--- a/公开课/跨域/备份/static/postmessage/B.html
+++ b/公开课/跨域/备份/static/postmessage/B.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     window.onmessage = function (ev) {
-        console.log(ev.data + ' [B]');
+        console.log(ev.data + ' [B]');//=>'AA [B]'
         ev.source.postMessage('BB', ev.origin);
     }
 </script>
